# chordify

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  discussion.yml  feature_request.yml  task.yml
.github/workflows/: project-automation.yml  weekly-progress-report.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/backend/: settings.py
docs/: 01_overview.md  02_requirements.md  03_database.md  04_api.md  05_ui.md  06_setup.md  07_project-management.md  08_issue-guideline.md  09_labels.md  10_backend-coding-guidelines.md  11_backend-testing-strategy.md  12_frontend-coding-guidelines.md  13_frontend-testing-strategy.md  14_deployment.md  15_ci_cd.md  16_docker-documentation.md  17_docker_frontend_nginx.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  rspack.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
nginx/: .dockerignore  Dockerfile  nginx.conf
