[project]
name = "chordify-backend"
version = "0.1.0"
description = "Django Ninja backend for Chordify"
requires-python = "~=3.12"

dependencies = [
    "django-ninja>=1.4.0,<2.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "pydantic>=2.11.1,<3.0.0",
    "pendulum>=3.0.0,<4.0.0",
    "dj-database-url>=2.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90", "N", "B", "A"]
ignore = ["E501", "B008"]
extend-select = ["C4", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["backend"]
known-third-party = ["django", "ninja", "psycopg2", "python_jose", "pydantic", "pendulum", "uvicorn"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations/"]
plugins = []

[tool.mypy-plugins]
django-stubs = true
